--- a/apps/settings/elements/developer.html
+++ b/apps/settings/elements/developer.html
@@ -35,6 +35,9 @@
             <span data-l10n-id="dev-tools-qps">Pseudo-localization</span>
           </label>
         </li>
+        <li>
+          <button class="icon icon-view" data-href="#geolocation-tools" data-l10n-id="geolocation">Geolocation</button>
+        </li>
       </ul>
       <header>
         <h2 data-l10n-id="graphics">Graphics</h2>
