--- a/apps/settings/index.html
+++ b/apps/settings/index.html
@@ -170,6 +170,7 @@
     <link rel="import" href="/elements/accessibility.html">
     <link rel="import" href="/elements/accessibility_screenreader.html">
     <link rel="import" href="/elements/accessibility_colors.html">
+    <link rel="import" href="/elements/geolocation_tools.html">
     <link rel="import" href="/elements/developer_hud.html">
     <link rel="import" href="/elements/developer.html">
     <link rel="import" href="/elements/crash_reports.html">
@@ -360,6 +361,8 @@
     <section is="accessibility" role="region" id="accessibility"></section>
     <!-- Device :: Developer :: HUD -->
     <section is="developer-hud" role="region" id="developer-hud"></section>
+    <!-- Device :: Developer :: Geolocation -->
+    <section is="geolocation-tools" role="region" id="geolocation-tools"></section>
     <!-- Device :: Developer -->
     <section is="developer" role="region" id="developer"></section>
     <!-- Device :: Improve Browser OS :: Crash Reports-->
