--- a/apps/settings/elements/developer.html
+++ b/apps/settings/elements/developer.html
@@ -245,6 +245,10 @@
           <p data-l10n-id="update-url">Update URL</p>
           <input type="text" name="app.update.url" dir="auto">
         </li>
+        <li>
+          <p data-l10n-id="update-url-override">Update URL (override)</p>
+          <input type="text" name="app.update.url.override" dir="auto">
+        </li>
       </ul>
     </div>
 
